--- a/ch04/ch04_神经网络的学习.ipynb
+++ b/ch04/ch04_神经网络的学习.ipynb
@@ -2170,7 +2170,9 @@
    "id": "3f81e4bc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test"
+   ]
   },
   {
    "cell_type": "code",
